--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -86,6 +86,8 @@
 ##     Added key: 'checkbox.allow.buzz'
 ##     Added key: 'message.disconnected.group.chat.error'
 ##     Added key: 'menuitem.show.offline.group'
+##     Added key: 'menuitem.move.to'
+##     Added key: 'menuitem.copy.to'
 
 
 ok = Ok
@@ -629,6 +631,8 @@ menuitem.sign.in.at.login = Sign in at login
 menuitem.enter.login.information = Enter login information
 menuitem.delete.login.information = Delete login information
 menuitem.show.offline.group = Group offline users
+menuitem.move.to = Move to
+menuitem.copy.to = Copy to
 
 tree.conference.services = Conference Services
 tree.users.in.room = Users In Room
