SPARK-296  	 Should add preferences to enable/disable emoticons.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@7551 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -88,6 +88,9 @@
 ##     Added key: 'menuitem.show.offline.group'
 ##     Added key: 'menuitem.move.to'
 ##     Added key: 'menuitem.copy.to'
+##     Added key: 'label.message.style'
+##     Added key: 'label.emoticons'
+##     Added key: 'checkbox.enable.emoticons'
 
 
 ok = Ok
@@ -183,7 +186,7 @@ checkbox.start.in.tray = &Start in System Tray
 checkbox.split.chat.window = Dock &Windows (Requires Spark restart)
 checkbox.tabs.on.top = &Chat tabs appear on top (Requires Spark restart)
 checkbox.allow.buzz = Allow users to buz&z you.
-
+checkbox.enable.emoticons = Enable Em&oticons
 
 
 label.user.on.public.network = User is on a public network
@@ -262,6 +265,9 @@ label.enter.group.name = Enter new group name
 label.network = Networ&k
 label.unable.to.add.contact = Unable to add contact.
 label.conflict.error = Unable to login due to account already signed in.
+label.message.style = &Message Style
+label.emoticons = &Emoticons
+
 
 message.username.error = Specify a username for the account.
 message.password.error = Specify a password for this account.
