SPARK-602  	 Last activity on unsupported clients is handled more gracefully.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@7594 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -91,6 +91,7 @@
 ##     Added key: 'label.message.style'
 ##     Added key: 'label.emoticons'
 ##     Added key: 'checkbox.enable.emoticons'
+##     Added key: 'message.unable.to.retrieve.last.activity'
 
 
 ok = Ok
@@ -463,6 +464,7 @@ message.specify.contact.jid = Please specify the contact JID (ex. ddman@jabber.o
 message.invalid.jid.error = The JID specified is invalid.
 message.specify.group = Specify contact group to add the new user to.
 message.room.creation.error = The room could not be created.
+message.unable.to.retrieve.last.activity = Unable to determine last activity for {0}.
 
 
 title.passwords.no.match = Confirm passwords.
