Fixed notification issue with gateway errors.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@7618 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -412,7 +412,7 @@ message.unable.to.send.file = You were unable to send the file to {0}.
 message.sending.file.to = Sending file to {0}.
 message.you.have.sent = You have sent a file to {0}.
 message.file.transfer.rejected = The file transfer was not accepted by {0}.
-message.disable.transport = Remove login information from gateway?
+message.disable.transport = Remove login information from {0}?
 message.register.transports = Register with these available transports.
 message.enter.aim = Enter your AIM username and password below.
 message.enter.msn = Enter your MSN username and password below.
