Added system look and feel preferences.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@7726 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -92,6 +92,7 @@
 ##     Added key: 'label.emoticons'
 ##     Added key: 'checkbox.enable.emoticons'
 ##     Added key: 'message.unable.to.retrieve.last.activity'
+##     Added key: 'checkbox.use.system.look.and.feel'
 
 
 ok = Ok
@@ -188,6 +189,7 @@ checkbox.split.chat.window = Dock &Windows (Requires Spark restart)
 checkbox.tabs.on.top = &Chat tabs appear on top (Requires Spark restart)
 checkbox.allow.buzz = Allow users to buz&z you.
 checkbox.enable.emoticons = Enable Em&oticons
+checkbox.use.system.look.and.feel = Use System Look And &Feel (Requires Spark restart)
 
 
 label.user.on.public.network = User is on a public network
