SPARK-650 Fix text for Jingle calls
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@7890 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -93,7 +93,9 @@
 ##     Added key: 'checkbox.enable.emoticons'
 ##     Added key: 'message.unable.to.retrieve.last.activity'
 ##     Added key: 'checkbox.use.system.look.and.feel'
-
+##
+## 2.6
+##     Added key: 'tooltip.place.voice.call'
 
 ok = Ok
 cancel = Cancel
@@ -673,3 +675,4 @@ tooltip.view.history = View conversation history
 tooltip.view.changelog = View Change Log
 tooltip.view.readme = View ReadMe
 tooltip.notifications = Notification preferences for incoming chats.
+tooltip.place.voice.call = Place a voice call.
