Small fix in translation
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@7921 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n_pt_BR.properties
+++ b/src/resources/i18n/spark_i18n_pt_BR.properties
@@ -489,7 +489,7 @@ menuitem.destroy.room = Remover Sala
 menuitem.set.status.message = Mudar mensagem de Status...
 menuitem.edit.status.message = Editar mensagens customizadas...
 menuitem.broadcast.to.group = Enviar mensagem para grupo
-menuitem.alert.when.online = Me alert quando o usu\u00e1rio estiver online
+menuitem.alert.when.online = Alertar quando o usu\u00e1rio estiver online
 menuitem.remove.alert.when.online = Remover Alerta
 menuitem.save.as = Salvar como...
 menuitem.view.client.version = Ver vers\u00e3o do Cliente
