SPARK-659  	 Socks5 proxy is not using username and password. SPARK-661  	 Update Italian translation
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@7964 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -94,8 +94,13 @@
 ##     Added key: 'message.unable.to.retrieve.last.activity'
 ##     Added key: 'checkbox.use.system.look.and.feel'
 ##
-## 2.6
+## 2.5.2
 ##     Added key: 'tooltip.place.voice.call'
+##     Added key: 'message.buzz.alert.notification'
+##     Added kye: 'message.buzz.sent'
+
+
+
 
 ok = Ok
 cancel = Cancel
@@ -469,7 +474,8 @@ message.invalid.jid.error = The JID specified is invalid.
 message.specify.group = Specify contact group to add the new user to.
 message.room.creation.error = The room could not be created.
 message.unable.to.retrieve.last.activity = Unable to determine last activity for {0}.
-
+message.buzz.alert.notification = Get the user's attention.
+message.buzz.sent = Sent alert notification to user.
 
 title.passwords.no.match = Confirm passwords.
 title.create.problem = Account Creation Problem
