--- a/src/resources/i18n/spark_i18n_it.properties
+++ b/src/resources/i18n/spark_i18n_it.properties
@@ -54,6 +54,40 @@
 ##     Added key: 'message.invalid.jid.error'
 ##     Added key: 'message.specify.group'
 ##     Added key: 'add'
+##
+##
+##
+## 2.0.5
+##     Added key: 'Broadcast'
+##     Added key: 'label.user.on.public.network'
+##     Added key: 'label.network'
+##
+##
+## 2.0.6
+##     Added key: 'button.add.user'
+##     Added key: 'menuitem.sign.in'
+##     Added key: 'menuitem.sign.out'
+##     Added key: 'menuitem.sign.in.at.login'
+##     Added key: 'menuitem.enter.login.information'
+##     Added key: 'menuitem.delete.login.information'
+##     Added key: 'button.save'
+##
+##
+## 2.5
+##     Added key: 'button.start.chat'
+##     Added key: 'button.send.email'
+##     Added key: 'available'
+##     Added key: 'checkbox.tabs.on.top'
+##     Added key: 'user.has.signed.in'
+##     Added key: 'user.has.signed.off'
+##     Added key: 'label.unable.to.add.contact'
+##     Added key: 'label.conflict.error'
+##     Added key: 'message.room.creation.error'
+##     Added key: 'checkbox.allow.buzz'
+##     Added key: 'message.disconnected.group.chat.error'
+##     Added key: 'menuitem.show.offline.group'
+##     Added key: 'menuitem.move.to'
+##     Added key: 'menuitem.copy.to'
 
 ok = Ok
 cancel = Annulla
@@ -79,6 +113,10 @@ not.registered = Non Registrato
 save = Salva
 yes = Si
 no = No
+broadcast = Messaggio a Tutti
+available = Disponibile
+user.has.signed.in = è entrato.
+user.has.signed.off = è uscito.
 
 button.create.account = &Crea Account
 button.close = C&hiudi
@@ -113,6 +151,11 @@ button.search = &Cerca
 button.add.service = &Aggiungi Servizio
 button.quit = &Esci
 button.new = &Nuovo
+button.add.user = &Aggiungi Utente
+button.save = &Salva
+button.start.chat = Chat
+button.send.email = Email
+button.send = Invia
 
 checkbox.save.password = &Salva Password
 checkbox.auto.login = &Login Automatico
@@ -133,8 +176,11 @@ checkbox.play.sound.on.invitation = Esegui file audio alla &ricezione di un invi
 checkbox.idle.enabled = &Notifica Inattività
 checkbox.launch.on.startup = &Esegui all'avvio
 checkbox.start.in.tray = &Esegui Spark Minimizzato
-checkbox.split.chat.window = PLEASE TRANSLATE: Dock &Windows (Requires Spark restart)
+checkbox.split.chat.window = Dividi le &Finestre (Richiede il riavvio di Spark)
+checkbox.tabs.on.top = Schede della &Chat appaiono in alto (Richiede il riavvio di Spark)
+checkbox.allow.buzz = Abilita gli utenti ad attira&re la tua attenzione.
 
+label.user.on.public.network = L'utente è in una rete pubblica
 label.change.password.to = &Cambia Password
 label.username = &Nome Utente
 label.name = &Nome
@@ -207,6 +253,9 @@ label.time.till.idle = &Intervallo di Inattività (min)
 label.jabber.id = &Jabber ID
 label.group = &Gruppo
 label.enter.group.name = Inserisci il nome del nuovo gruppo
+label.network = Ret&e
+label.unable.to.add.contact = Impossibile aggiungere il contatto.
+label.conflict.error = Impossibile abilitarsi, l'account è già loggato.
 
 
 message.username.error = Inserisci un nome utente per l'account.
@@ -401,7 +450,7 @@ message.cannot.add.contact.to.shared.group = Impossibile aggiungere nuovi contat
 message.specify.contact.jid = Indica il JID (ex. ddman@jabber.org) del contatto
 message.invalid.jid.error = Il JID indicato non è valido.
 message.specify.group = Indicare il gruppo di contatti in cui collocare l'utente.
-
+message.room.creation.error = La stanza non può essere creata.
 
 
 
@@ -572,6 +621,14 @@ menuitem.edit.my.profile = &Modifica il tuo Profilo...
 menuitem.lookup.profile = &Ricerca Profilo...
 menuitem.add.as.contact = Aggiungi come contatto
 menuitem.chat = Chat
+menuitem.sign.in = Login
+menuitem.sign.out = Logout
+menuitem.sign.in.at.login = Entra al Login
+menuitem.enter.login.information = Inserisci le Informazioni di Login
+menuitem.delete.login.information = Cancella le Informazioni di Login
+menuitem.show.offline.group = Raggruppa gli utenti offline
+menuitem.move.to = Spasta a
+menuitem.copy.to = Copia a
 
 tree.conference.services = Servizi Conferenze
 tree.users.in.room = Utenti nella Stanza
