SPARK-727  	 Add new Spark Users Guide
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@8104 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -98,6 +98,12 @@
 ##     Added key: 'tooltip.place.voice.call'
 ##     Added key: 'message.buzz.alert.notification'
 ##     Added kye: 'message.buzz.sent'
+##
+## 2.5.2
+##     Added key: 'menuitem.user.guide'
+##
+##
+##
 
 
 
@@ -586,7 +592,8 @@ menuitem.check.for.updates = Check For Updates
 menuitem.help = Help
 menuitem.preferences = Preferences
 menuitem.about = About
-menuitem.online.help = Online Help
+menuitem.online.help = Spark Forums
+menuitem.user.guide = User Guide
 menuitem.open = Open
 menuitem.hide = Hide
 menuitem.status = Status
