Updating for skinning release.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@8244 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -198,11 +198,11 @@ checkbox.play.sound.on.invitation = Play sound when &invitation is received
 checkbox.idle.enabled = &Idle Enabled
 checkbox.launch.on.startup = &Launch on Startup
 checkbox.start.in.tray = &Start in System Tray
-checkbox.split.chat.window = Dock &Windows (Requires Spark restart)
-checkbox.tabs.on.top = &Chat tabs appear on top (Requires Spark restart)
+checkbox.split.chat.window = Dock &Windows (Requires restart)
+checkbox.tabs.on.top = &Chat tabs appear on top (Requires restart)
 checkbox.allow.buzz = Allow users to buz&z you.
 checkbox.enable.emoticons = Enable Em&oticons
-checkbox.use.system.look.and.feel = Use System Look And &Feel (Requires Spark restart)
+checkbox.use.system.look.and.feel = Use System Look And &Feel (Requires restart)
 
 
 label.user.on.public.network = User is on a public network
