SPARK-786 Need to update the italian translation.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@8803 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n_it.properties
+++ b/src/resources/i18n/spark_i18n_it.properties
@@ -89,6 +89,24 @@
 ##     Added key: 'menuitem.move.to'
 ##     Added key: 'menuitem.copy.to'
 
+##     Added key: 'label.message.style'
+##     Added key: 'label.emoticons'
+##     Added key: 'checkbox.enable.emoticons'
+##     Added key: 'message.unable.to.retrieve.last.activity'
+##     Added key: 'checkbox.use.system.look.and.feel'
+##
+## 2.5.2
+##     Added key: 'tooltip.place.voice.call'
+##     Added key: 'message.buzz.alert.notification'
+##     Added kye: 'message.buzz.sent'
+##
+## 2.5.2
+##     Added key: 'menuitem.user.guide'
+##
+##
+##
+
+
 ok = Ok
 cancel = Annulla
 add = Aggiungi
@@ -179,6 +197,8 @@ checkbox.start.in.tray = &Esegui Spark Minimizzato
 checkbox.split.chat.window = Dividi le &Finestre (Richiede il riavvio di Spark)
 checkbox.tabs.on.top = Schede della &Chat appaiono in alto (Richiede il riavvio di Spark)
 checkbox.allow.buzz = Abilita gli utenti ad attira&re la tua attenzione.
+checkbox.enable.emoticons = Enable Em&oticons
+checkbox.use.system.look.and.feel = Utilizza il sistema Look and &Feel (Richiede il riavvio di Spark)
 
 label.user.on.public.network = L'utente è in una rete pubblica
 label.change.password.to = &Cambia Password
@@ -256,6 +276,8 @@ label.enter.group.name = Inserisci il nome del nuovo gruppo
 label.network = Ret&e
 label.unable.to.add.contact = Impossibile aggiungere il contatto.
 label.conflict.error = Impossibile abilitarsi, l'account è già loggato.
+label.message.style = &Stile Messaggi
+label.emoticons = &Emoticons
 
 
 message.username.error = Inserisci un nome utente per l'account.
@@ -451,7 +473,8 @@ message.specify.contact.jid = Indica il JID (ex. ddman@jabber.org) del contatto
 message.invalid.jid.error = Il JID indicato non è valido.
 message.specify.group = Indicare il gruppo di contatti in cui collocare l'utente.
 message.room.creation.error = La stanza non può essere creata.
-
+message.buzz.alert.notification = Ottieni l'attenzione dell'utente.
+message.buzz.sent = Invia una notifica all'utente.
 
 
 
@@ -629,6 +652,7 @@ menuitem.delete.login.information = Cancella le Informazioni di Login
 menuitem.show.offline.group = Raggruppa gli utenti offline
 menuitem.move.to = Spasta a
 menuitem.copy.to = Copia a
+menuitem.user.guide = Guida Utente
 
 tree.conference.services = Servizi Conferenze
 tree.users.in.room = Utenti nella Stanza
@@ -659,3 +683,4 @@ tooltip.view.history = Visualizza lo storico delle conversazioni
 tooltip.view.changelog = Visualizza il ChangeLog
 tooltip.view.readme = Visualizza ReadMe
 tooltip.notifications = Notifica preferenze per le chat in arrivo.
+tooltip.place.voice.call = Fai una chiamata vocale.
