Adding GTalk and XMPP Gateways
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@8929 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -431,6 +431,8 @@ message.disable.transport = Remove login information from {0}?
 message.register.transports = Register with these available transports.
 message.enter.aim = Enter your AIM username and password below.
 message.enter.msn = Enter your MSN username and password below.
+message.enter.gtalk = Enter your GTalk username and password below.
+message.enter.xmpp = Enter your XMPP username and password below.
 message.enter.yahoo = Enter your username and password to connect to Yahoo.
 message.enter.icq = Enter your ICQ username and password below.
 message.username.password.error = Username and/or Password need to be supplied.
@@ -538,6 +540,8 @@ title.disable.transport = Remove Login Information
 title.available.transports = Available Transports
 title.transports = Transports
 title.aim.registration = AIM Account Credentials
+title.gtalk.registration = GTalk Account Credentials
+title.xmpp.registration = XMPP Account Credentials
 title.msn.registration = MSN Account Credentials
 title.yahoo.registration = Yahoo Account Credentials
 title.icq.registration = ICQ Account Credentials
