--- a/src/resources/i18n/spark_i18n_pt_BR.properties
+++ b/src/resources/i18n/spark_i18n_pt_BR.properties
@@ -47,7 +47,6 @@ button.refresh = &Atualizar
 button.find = &Encontrar
 button.update = &Atualizar
 button.cancel = &Cancelar
-button.accept = &Aceitar
 button.decline = &N\u00e3o Aceitar
 button.join = &Participar
 button.save.for.future.use = &Salvar
@@ -56,7 +55,6 @@ button.dial.number = &Chamar N\u00famero
 button.clear = &Limpar
 button.search = &Procurar
 button.add.service = &Adicionar Servi\u00e7o
-
 
 
 checkbox.save.password = &Salvar Senha
@@ -74,8 +72,8 @@ checkbox.window.to.front = &Trazer Janela para o Topo
 checkbox.play.sound.on.new.message = Tocar sons quando &receber mensagem
 checkbox.play.sound.when.offline = Tocar sons quando usu\u00e1rio ficar &offline
 checkbox.play.sound.on.outgoing.message = Tocar sons quando &enviar mensagem
-checkbox.auto.login = &Login Autom\u00e1tico
-checkbox.save.password = &Salvar Senha
+checkbox.play.sound.on.invitation = Tocar sons quando receber convite
+checkbox.allow.buzz = Permitir que usu\u00e1rios chamem sua aten\u00e7\u00e3o
 checkbox.idle.enabled = &Ausente Habilidado
 checkbox.launch.on.startup = &Executar ao Iniciar
 checkbox.start.in.tray = &Iniciar na Bandeja
@@ -119,7 +117,6 @@ label.new.nickname = Novo Apelido
 label.server.address = &Endere\u00e7o do Servidor
 label.nickname = &Apelido
 label.presence = &Presen\u00e7a
-label.message = &Mensagem
 label.priority = P&rioridade
 label.enter.address = Endere\u00e7o
 label.jabber.address = &Endere\u00e7o Jabber
@@ -150,7 +147,6 @@ label.email.address = &Endere\u00e7o de Email
 label.jid = &JID
 label.search.service = &Servi\u00e7os de Procura
 label.xmpp.port = &Porta XMPP
-label.response.timeout = &Tempo de resposta m\u00e1ximo(sec)
 label.time.till.idle = &Tempo antes de Ausentar (min)
 
 message.username.error = Especificar um nome de usu\u00e1rio para esta conta.
@@ -259,7 +255,7 @@ message.user.granted.admin = {0} possui Privil\u00e9gios de Administrador.
 message.user.revoked.admin = Privil\u00e9gios de Administrador foram revogados para {0}.
 message.user.nickname.changed = {0} agora \u00e9 {1}.
 message.your.kicked = Voc\u00ea foi expulso de {0}.
-message.your.voice.revoked = Voc\u00ea recebeu a palavra neste Chat.
+message.your.voice.granted = Voc\u00ea recebeu a palavra neste Chat.
 message.your.voice.revoked = Sua palavra foi revogada.
 message.your.banned = Voc\u00ea foi expulso desta sala.
 message.your.membership.granted = Voc\u00ea possui privil\u00e9gios de membro.
@@ -307,7 +303,6 @@ message.number.to.call = Especifique o numero a ser chamado
 message.no.caller.id = Sem identifica\u00e7\u00e3o
 message.no.history.found = N\u00e3o h\u00e1 hist\u00f3rico de conversas com este usu\u00e1rio.
 message.prompt.plugin.uninstall = Voc\u00ea tem certeza que deseja desinstalar {0}?
-message.restart.spark = Voc\u00ea precisa reiniciar o Spark para as altera\u00e7\u00f5es surtirem efeito.
 message.loading.please.wait = Carregando. Aguarde...
 message.plugins.not.available = N\u00e3o foi poss\u00edvel contactar o reposit\u00f3rio de plugins.
 message.downloading = Realizando o Download {0}
@@ -345,12 +340,10 @@ title.account.create.registration = Registro de conta
 title.register.account = Registrar nova conta
 title.notification = Notifica\u00e7\u00e3o
 title.advanced.connection.preferences = Prefer\u00eancias Avan\u00e7adas de Conex\u00e3o
-title.preferences = Prefer\u00eancias
 title.error = Erro
 title.status.message = Messagem de Status
 title.spark.preferences = Preferencias
 title.alert = Alerta
-title.broadcast.message = Broadcast Message
 title.tray.information = Tray Information
 title.select.file.to.send = Selecione Arquivo(s) Para Enviar
 title.choose.directory = Selecione a Pasta
@@ -428,7 +421,8 @@ title.upgrading.client = Atualizando Cliente
 title.cancelled = Cancelado
 title.new.version.available = Nova Vers\u00e3o Dispon\u00edvel
 title.new.client.available = Novo Cliente Dispon\u00edvel
-
+title.file.transfer.preferences = Prefer\u00eancias de Transfer\u00eancia
+title.file.transfer = Transfer\u00eancia de Arquivo
 
 menuitem.contacts = Contatos
 menuitem.actions = A\u00e7\u00f5es
@@ -498,7 +492,9 @@ menuitem.edit.my.profile = &Editar meu Perfil...
 menuitem.lookup.profile = &Verificar Perfil...
 menuitem.add.as.contact = Adicionar como contato
 menuitem.chat = Chat
-menuitem.view.profile = Ver Perfil
+menuitem.show.offline.group = Agrupar usu\u00e1rios offline
+menuitem.move.to = Mover para
+menuitem.copy.to = Copiar para
 
 tree.conference.services = Servi\u00e7os de Confer\u00eancia
 tree.users.in.room = Usu\u00e1rios na Sala
