Update language settings.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@9030 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -104,7 +104,9 @@
 ##
 ##
 ##
-
+## 2.5.7
+##     Added key: 'menuitem.languages'
+##     Added key: 'message.restart.required'
 
 
 
@@ -484,6 +486,7 @@ message.room.creation.error = The room could not be created.
 message.unable.to.retrieve.last.activity = Unable to determine last activity for {0}.
 message.buzz.alert.notification = Get the user's attention.
 message.buzz.sent = Sent alert notification to user.
+message.restart.required = You will need to restart Spark to have your changes take effect. Restart now?
 
 title.passwords.no.match = Confirm passwords.
 title.create.problem = Account Creation Problem
@@ -662,6 +665,7 @@ menuitem.delete.login.information = Delete login information
 menuitem.show.offline.group = Group offline users
 menuitem.move.to = Move to
 menuitem.copy.to = Copy to
+menuitem.languages = Languages
 
 tree.conference.services = Conference Services
 tree.users.in.room = Users In Room
