--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -107,6 +107,8 @@
 ## 2.5.7
 ##     Added key: 'menuitem.languages'
 ##     Added key: 'message.restart.required'
+##     Added key: 'checkbox.notify.user.goes.offline'
+##     Added key: 'checkbox.notify.user.comes.online'
 
 
 
@@ -205,6 +207,8 @@ checkbox.tabs.on.top = &Chat tabs appear on top (Requires restart)
 checkbox.allow.buzz = Allow users to buz&z you.
 checkbox.enable.emoticons = Enable Em&oticons
 checkbox.use.system.look.and.feel = Use System Look And &Feel (Requires restart)
+checkbox.notify.user.goes.offline = Notify when a user goes offline.
+checkbox.notify.user.comes.online = Notify when a user comes online.
 
 
 label.user.on.public.network = User is on a public network
