--- a/src/resources/i18n/spark_i18n_pt_BR.properties
+++ b/src/resources/i18n/spark_i18n_pt_BR.properties
@@ -77,7 +77,9 @@ checkbox.allow.buzz = Permitir que usu\u00e1rios chamem sua aten\u00e7\u00e3o
 checkbox.idle.enabled = &Ausente Habilidado
 checkbox.launch.on.startup = &Executar ao Iniciar
 checkbox.start.in.tray = &Iniciar na Bandeja
-checkbox.split.chat.window = PLEASE TRANSLATE: Dock &Windows (Requires Spark restart)
+checkbox.split.chat.window = Dock &Windows (Necessita reiniciar)
+checkbox.notify.user.goes.offline = Notificar quando usu\u00e1rio ficar offline.
+checkbox.notify.user.comes.online = Notificar quando usu\u00e1rio ficar online.
 
 label.change.password.to = &Trocar senha para
 label.username = &Usu\u00e1rio
