--- a/src/resources/i18n/spark_i18n_pt_BR.properties
+++ b/src/resources/i18n/spark_i18n_pt_BR.properties
@@ -55,7 +55,7 @@ button.dial.number = &Chamar N\u00famero
 button.clear = &Limpar
 button.search = &Procurar
 button.add.service = &Adicionar Servi\u00e7o
-
+button.new = &Novo
 
 checkbox.save.password = &Salvar Senha
 checkbox.auto.login = &Login Autom\u00e1tico
@@ -150,6 +150,8 @@ label.jid = &JID
 label.search.service = &Servi\u00e7os de Procura
 label.xmpp.port = &Porta XMPP
 label.time.till.idle = &Tempo antes de Ausentar (min)
+label.group = &Grupo
+label.enter.group.name = Digite o nome do grupo
 
 message.username.error = Especificar um nome de usu\u00e1rio para esta conta.
 message.password.error = Especificar uma senha para esta conta.
@@ -333,6 +335,7 @@ message.total.downloaded = Total recebido
 message.new.spark.available = {0} est\u00e1 dispon\u00edvel. Voc\u00ea deseja instalar?
 message.restart.spark.to.install = Voc\u00ea precisa reiniciar o cliente para instalar a mais nova vers\u00e3o. Deseja fazer isto agora?
 message.add.to.roster = Adicionar a lista
+message.add.contact.to.list = Adicionar usu\u00e1rio na lista de contatos
 
 title.passwords.no.match = Confirme a senha.
 title.create.problem = Problema na cria\u00e7\u00e3o de conta
@@ -425,6 +428,8 @@ title.new.version.available = Nova Vers\u00e3o Dispon\u00edvel
 title.new.client.available = Novo Cliente Dispon\u00edvel
 title.file.transfer.preferences = Prefer\u00eancias de Transfer\u00eancia
 title.file.transfer = Transfer\u00eancia de Arquivo
+title.add.contact = Adicionar Contato
+title.new.roster.group = Novo Grupo
 
 menuitem.contacts = Contatos
 menuitem.actions = A\u00e7\u00f5es
@@ -510,6 +515,7 @@ tab.personal = Pessoal
 tab.business = Corporativo
 tab.home = Resid\u00eancia
 tab.avatar = Avatar
+tab.conferences = Confer\u00eancias
 
 group.connection = Conex\u00e3o
 group.conferences.found = Servi\u00e7o de Confer\u00eancia Encontrado
