--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -109,7 +109,10 @@
 ##     Added key: 'message.restart.required'
 ##     Added key: 'checkbox.notify.user.goes.offline'
 ##     Added key: 'checkbox.notify.user.comes.online'
-
+##     Added key: 'message.send.to.these.people'
+##     Added key: 'message'
+##     Added key: 'message.normal'
+##     Added key: 'message.alert.notify'
 
 
 ok = Ok
@@ -140,6 +143,7 @@ broadcast = Broadcast
 available = Available
 user.has.signed.in = has signed in.
 user.has.signed.off = has signed off.
+message = Message
 
 
 button.create.account = &Create Account
@@ -491,6 +495,9 @@ message.unable.to.retrieve.last.activity = Unable to determine last activity for
 message.buzz.alert.notification = Get the user's attention.
 message.buzz.sent = Sent alert notification to user.
 message.restart.required = You will need to restart Spark to have your changes take effect. Restart now?
+message.send.to.these.people = Send to these people
+message.normal = Normal Message
+message.alert.notify = Alert Notification
 
 title.passwords.no.match = Confirm passwords.
 title.create.problem = Account Creation Problem
