--- a/src/resources/i18n/spark_i18n_pt_BR.properties
+++ b/src/resources/i18n/spark_i18n_pt_BR.properties
@@ -23,6 +23,7 @@ not.registered = N\u00e3o Registrado
 save = Salvar
 yes = Sim
 no = N\u00e3o
+message = Message
 
 button.create.account = &Criar Conta
 button.close = &Fechar
@@ -336,6 +337,9 @@ message.new.spark.available = {0} est\u00e1 dispon\u00edvel. Voc\u00ea deseja in
 message.restart.spark.to.install = Voc\u00ea precisa reiniciar o cliente para instalar a mais nova vers\u00e3o. Deseja fazer isto agora?
 message.add.to.roster = Adicionar a lista
 message.add.contact.to.list = Adicionar usu\u00e1rio na lista de contatos
+message.send.to.these.people = Enviar para as seguintes pessoas
+message.normal = Mensagem Normal
+message.alert.notify = Notificar como Alerta
 
 title.passwords.no.match = Confirme a senha.
 title.create.problem = Problema na cria\u00e7\u00e3o de conta
