--- a/src/resources/i18n/spark_i18n_pt_BR.properties
+++ b/src/resources/i18n/spark_i18n_pt_BR.properties
@@ -23,7 +23,7 @@ not.registered = N\u00e3o Registrado
 save = Salvar
 yes = Sim
 no = N\u00e3o
-message = Message
+message = Mensagem
 
 button.create.account = &Criar Conta
 button.close = &Fechar
