[SPARK-868] Now displaying full status message in tooltip. [SPARK-867] Added GaduGadu, IRC, and SIMPLE gateway support into mainline. [SPARK-820] Display JID if nickname is an empty string. Misc cleanup here and there. Avatar size is now configurable. All contact list items now mirror height of avatar size for consistancy.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@9429 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -113,6 +113,17 @@
 ##     Added key: 'message'
 ##     Added key: 'message.normal'
 ##     Added key: 'message.alert.notify'
+##
+## 2.5.8
+##     Added key: 'message.enter.simple'
+##     Added key: 'message.enter.irc'
+##     Added key: 'message.enter.gadugadu'
+##     Added key: 'title.simple.registration'
+##     Added key: 'title.irc.registration'
+##     Added key: 'title.gadugadu.registration'
+##     Added key: 'message.username.error'
+##     Added key: 'message.password.error'
+##     Added key: 'message.nickname.error'
 
 
 ok = Ok
@@ -445,6 +456,12 @@ message.enter.gtalk = Enter your GTalk username and password below.
 message.enter.xmpp = Enter your XMPP username and password below.
 message.enter.yahoo = Enter your username and password to connect to Yahoo.
 message.enter.icq = Enter your ICQ username and password below.
+message.enter.irc = Enter your IRC username, password, and nickname below.
+message.enter.simple = Enter your SIMPLE username and password below.
+message.enter.gadugadu = Enter your GaduGadu username and password below.
+message.username.error = Username needs to be supplied.
+message.password.error = Password needs to be supplied.
+message.nickname.error = Nickname needs to be supplied.
 message.username.password.error = Username and/or Password need to be supplied.
 message.registration.transport.failed = Unable to register with gateway.
 message.client.information = Client information for {0}
@@ -559,6 +576,9 @@ title.xmpp.registration = XMPP Account Credentials
 title.msn.registration = MSN Account Credentials
 title.yahoo.registration = Yahoo Account Credentials
 title.icq.registration = ICQ Account Credentials
+title.irc.registration = IRC Account Credentials
+title.simple.registration = SIMPLE Account Credentials
+title.gadugadu.registration = GaduGadu Account Credentials
 title.registration.error = Registration Error
 title.jabber.browser = Browser
 title.version.and.time = Version and Time
