Added QQ transport from lizongbo, updated chinese translation, and fix for language plugin.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@9798 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -198,6 +198,8 @@
 ##     Added key: 'delete.log.permanently'
 ##     Added key: 'delete.permanently'
 ##     Added key: 'label.contactlist.avatarsize'
+##     Added key: 'title.qq.registration'
+##     Added key: 'message.enter.qq'
 
 accept = Accept
 active = Active
@@ -564,6 +566,7 @@ message.enter.jabber.id = Enter Jabber ID
 message.enter.message.to.broadcast = Enter message to broadcast to your entire roster list.
 message.enter.msn = Enter your MSN username and password below.
 message.enter.new.subject = Enter new subject
+message.enter.qq = Enter your QQ Number and password below.
 message.enter.room.password = Enter Room Password
 message.enter.simple = Enter your SIMPLE username and password below.
 message.enter.valid.jid = Enter a valid Jabber ID
@@ -824,6 +827,7 @@ title.plugins = Plugins
 title.preferences = Preferences
 title.profile.information = Profile Information
 title.profile.not.found = Profile Not Found
+title.qq.registration = QQ Account Credentials
 title.register.account = Register New Account
 title.registration.error = Registration Error
 title.reminder = Reminder
