--- a/src/resources/i18n/spark_i18n_pt_BR.properties
+++ b/src/resources/i18n/spark_i18n_pt_BR.properties
@@ -7,6 +7,7 @@ close = Fechar
 create = Criar
 invite = Convidar
 date = data
+add = Adicionar
 from = De
 room.name = Nome da Sala
 join = Participar
@@ -57,8 +58,11 @@ button.clear = &Limpar
 button.search = &Procurar
 button.add.service = &Adicionar Servi\u00e7o
 button.new = &Novo
+button.view.tasklist = Ver tarefas
+button.view.notes = Ver notas
 
 checkbox.save.password = &Salvar Senha
+checkbox.enable.emoticons = Habilitar Em&oticons
 checkbox.auto.login = &Login Autom\u00e1tico
 checkbox.use.proxy.server = &Usar Proxy
 checkbox.auto.discover.port = &Resolver endere\u00e7o e porta automaticamente
@@ -81,8 +85,10 @@ checkbox.start.in.tray = &Iniciar na Bandeja
 checkbox.split.chat.window = Dock &Windows (Necessita reiniciar)
 checkbox.notify.user.goes.offline = Notificar quando usu\u00e1rio ficar offline.
 checkbox.notify.user.comes.online = Notificar quando usu\u00e1rio ficar online.
+checkbox.use.system.look.and.feel = Usar gr\u00e1ficos do sistema (Necess\u00e1rio Reiniciar)
 
 label.change.password.to = &Trocar senha para
+label.chatroom.fontsize = Tamanho da fonte no Chat:
 label.username = &Usu\u00e1rio
 label.name = &Nome
 label.room.name = &Nome da Sala
@@ -98,6 +104,7 @@ label.use.default = Usar \u00e3
 label.port = &Porta
 label.response.timeout = &Tempo de Resposta Esgotado
 label.auto.login = &Login Autom\u00e1tico
+label.contactlist.fontsize = Tamanho da fonte da &lista de contatos:
 label.old.ssl = &Usar m\u00e9todo antigo de porta SSL 
 label.host = &Endere\u00e7o
 label.resource = &Recursos
@@ -342,6 +349,8 @@ message.normal = Mensagem Normal
 message.alert.notify = Notificar como Alerta
 
 title.passwords.no.match = Confirme a senha.
+title.appearance = Apar\u00eancia
+title.appearance.preferences = Personaliza\u00e7\u00e3o
 title.create.problem = Problema na cria\u00e7\u00e3o de conta
 title.account.created = Conta criada
 title.create.new.account = Criar nova conta
@@ -435,6 +444,7 @@ title.file.transfer = Transfer\u00eancia de Arquivo
 title.add.contact = Adicionar Contato
 title.new.roster.group = Novo Grupo
 
+menuitem.about = Sobre
 menuitem.contacts = Contatos
 menuitem.actions = A\u00e7\u00f5es
 menuitem.exit = Sair
@@ -451,6 +461,7 @@ menuitem.open = Abrir
 menuitem.hide = Esconder
 menuitem.status = Status
 menuitem.view.downloads = Ver Downloads
+menuitem.view.logs = Ver Logs
 menuitem.save = Salvar
 menuitem.add = Adicionar
 menuitem.add.contact = Adicionar Contato
@@ -488,7 +499,7 @@ menuitem.grant.moderator = Permitir Moderador
 menuitem.revoke.moderator = Revogar Moderador
 menuitem.invite.users = Convidar Usu\u00e1rios
 menuitem.invite.group.to.conference = Convidar Grupo para Confer\u00eancia
-menuitem.start.a.conference = Iniciar um Confer\u00eancia...
+menuitem.start.a.conference = Iniciar uma Confer\u00eancia...
 menuitem.change.subject = Mudar Assunto
 menuitem.destroy.room = Remover Sala
 menuitem.set.status.message = Mudar mensagem de Status...
@@ -509,6 +520,16 @@ menuitem.copy.to = Copiar para
 
 tree.conference.services = Servi\u00e7os de Confer\u00eancia
 tree.users.in.room = Usu\u00e1rios na Sala
+
+status.available = Dispon\u00edvel
+status.away = Ausente
+status.custom.messages = Mensagem personalizada
+status.do.not.disturb = N\u00e3o incomode
+status.extended.away = Aus\u00eancia extendida
+status.free.to.chat = Dispon\u00edvel para conversar
+status.on.phone = Ao Telefone
+status.online = Online
+status.pending = Pendente
 
 tab.general = Geral
 tab.proxy = Proxy
