--- a/src/resources/i18n/spark_i18n_pt_BR.properties
+++ b/src/resources/i18n/spark_i18n_pt_BR.properties
@@ -455,7 +455,6 @@ menuitem.show.traffic = Ver Janela de Tr\u00e1fego
 menuitem.check.for.updates = Verificar Atualiza\u00e7\u00f5es
 menuitem.help = Ajuda
 menuitem.preferences = Prefer\u00eancias
-menuitem.about = Sobre
 menuitem.online.help = Ajuda Online
 menuitem.open = Abrir
 menuitem.hide = Esconder
@@ -557,3 +556,75 @@ tooltip.view.history = Ver hist\u00f3rico de conversas
 tooltip.view.changelog = Ver Log de mudan\u00e7as
 tooltip.view.readme = Ver LeiaMe
 tooltip.notifications = Prefer\u00eancias de notifica\u00e7\u00e3o de novos Chats.
+available=Disponível
+broadcast=Espalhar
+offline=Offline
+online=Online
+participants=Participantes
+unfiled=Indefinido
+user.has.signed.in=Usuário entrou
+user.has.signed.off=Usuário saiu
+while.offline=Enquanto Offline
+action.clear=Limpar
+action.copy=Copiar
+action.cut=Recortar
+action.paste=Colar
+action.print=Imprimir
+action.save=Salvar
+action.select.all=Selecionar Tudo
+button.add.user=Adicionar Usuário
+button.add2=Adicionar
+button.copy.to.clipboard=Copiar
+button.quit=Sair
+button.save=Salvar
+button.send=Enviar
+button.send.email=Enviar Email
+button.start.chat=Iniciar Chat
+button.tasks.active=Ativas
+button.tasks.all=Todas
+button.view.profile=Ver Perfil
+checkbox.show.avatars.in.contactlist=Mostrar Avatar na lista de contatos
+checkbox.tabs.on.top=Mostrar Chat no Topo (Necessita Reiniciar)
+checkbox.use.compression=Usar Compressão
+delete.log.permanently=Apagar Permanentemente
+delete.permanently=Apagar Permanentemente?
+gateway.username.password.error=Informe Usuário e Senha.
+group.empty=Nenhum usuário online.
+group.offline=Grupo Offline
+label.add.task=Adicionar tarefa
+label.conflict.error=
+label.emoticons=&Emoticons
+label.message.style=Estilo &Mensagem
+label.network=&Rede
+label.received=&Recebido
+label.show=Mostrar:
+label.timeformat=Usar {0}
+label.unable.to.add.contact=Impossível adicionar contato.
+label.user.on.public.network=Usuário está em uma rede pública
+menuitem.delete.login.information=Remover informação de login
+menuitem.dial=Discar
+menuitem.enter.login.information=Entrar com informação de login
+menuitem.languages=Traduções
+menuitem.sign.in.at.login=Conectar ao iniciar
+menuitem.sign.out=Sair
+menuitem.user.guide=Guia do Usuário
+message.autenticating=Autenticando
+message.buzz.alert.notification=Chamar Atenção
+message.buzz.sent=Enviar alerta ao usuário.
+message.cannot.add.contact.to.shared.group=Você não pode adicionar contatos a um grupo compartilhado.
+message.enter.xmpp=Entre com seu usuário e senha XMPP.
+message.invalid.status=Especifique um status válido.
+message.invalid.username.password=Usuário e Senha inválidos.
+message.no.updates=Não há updates.
+message.reconnect.attempting=Tentando...
+message.reconnect.failed=Reconexão Falhou.
+message.reconnect.wait=Reconectando em {0} segundos.
+message.restart.spark.changes=O plugin será removido na próxima inicialização.
+title.about=Sobre
+title.download.complete=Download completo
+title.notes=Notas
+title.password=Senha
+tooltip.place.voice.call=Chamar este Usuário
+tooltip.send.email=Enviar Email
+tooltip.start.chat=Iniciar conversa
+menuitem.quit=Sair
