[SPARK-926] Fixed missing resource that was causing custom status (and others) not to open.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@9984 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -375,6 +375,7 @@ label.jid = &JID
 label.job.title = &Job Title
 label.last.name = &Last Name
 label.local.time = &Local Time
+label.message = &Message
 label.message.style = &Message Style
 label.middle.name = &Middle Name
 label.minutes.before.stale.chat = &Minutes before an inactive room becomes stale
