Applied updates from WinSrev (thanks!) for: [JM-991] Group chat highlighting for your name mentioned, and your own messages. [JM-997] Fixed error when no username is specified during gateway registration. [JM-993] Mild color adjustments to default theme. [JM-278] Fixes for URL parsing, including better treatment of network addresses.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@10337 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -580,7 +580,7 @@ message.file.transfer.canceled = You have cancelled the file transfer.
 message.file.transfer.rejected = The file transfer was not accepted by {0}.
 message.find.conference.services = Find conference services
 message.forbidden.error = Received a forbidden error from the server.
-message,gateway.username.error = Username needs to be supplied.
+message.gateway.username.error = Username needs to be supplied.
 message.gateway.password.error = Password needs to be supplied.
 message.gateway.nickname.error = Nickname needs to be supplied.
 message.general.error = You have lost your connection to the server due to {0}.
