Applied patches from winsrev for: [SPARK-944] Language change now restarts Spark. Adds the ability to make groupchat highlighting an option, off by default.
And from Michael Will for:
[SPARK-637] When buzzed, tabs are now highlighted.
Debian build added.


git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@10343 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -429,6 +429,7 @@ menuitem.add = Add
 menuitem.add.as.contact = Add as a contact
 menuitem.add.contact = Add Contact
 menuitem.add.contact.group = Add Contact Group
+menuitem.add.group.highlighting = Highlight my name in group chats
 menuitem.alert.when.online = Alert when user is available
 menuitem.ban = Ban
 menuitem.ban.user = Ban User
