Updated version string to 2.6.0. [SPARK-969] and [SPARK-937] File transfer notifications now reflect transfer itself, not message before it.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@10360 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -318,7 +318,7 @@ checkbox.tabs.on.top = &Chat tabs appear on top (Requires restart)
 checkbox.use.compression = Use Co&mpression
 checkbox.use.proxy.server = &Use Proxy Server
 checkbox.use.system.look.and.feel = Use System Look And &Feel (Requires restart)
-checkbox.window.to.front = &Bring window to fron
+checkbox.window.to.front = &Bring window to front
 
 delete.log.permanently = Permanently delete log
 delete.permanently = Permanently delete?
@@ -579,6 +579,9 @@ message.file.exists.question = The file already exists. Overwrite?
 message.file.size = File Size: {0}
 message.file.transfer.canceled = You have cancelled the file transfer.
 message.file.transfer.rejected = The file transfer was not accepted by {0}.
+message.file.transfer.notification = File Transfer Notification
+message.file.transfer.short.message =  is sending you a file called: 
+message.file.transfer.chat.window = File Transfer Request:
 message.find.conference.services = Find conference services
 message.forbidden.error = Received a forbidden error from the server.
 message.gateway.username.error = Username needs to be supplied.
